@@ -707,6 +707,7 @@ Max Neunhöffer
 George Neville-Neil
 Johannes Nicolai
 Samuel Nicolary
+Jonathan Niehof
 Gustavo Niemeyer
 Oscar Nierstrasz
 Hrvoje Niksic
